--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Build
         run: |
           yarn
+          yarn lint
           yarn build
       - name: Upload artifact
         uses: actions/upload-artifact@v3
