--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -15,6 +16,7 @@
     "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
@@ -30,9 +32,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.1",
     "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0"
