--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
         run: |
           yarn
           yarn lint
+          yarn test
           yarn build
       - name: Upload artifact
         uses: actions/upload-artifact@v3
