--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "recoil": "^0.7.3-alpha.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/jest": "^28.1.3",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.1.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.1",
     "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13",
     "vite-plugin-html": "^3.2.0"
   }
 }
