--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "simplex-noise": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.3",
