--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,21 +8,19 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "test": "jest"
+    "lint:fix": "eslint src --fix"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "framer-motion": "^6.3.16",
+    "minesweeper-core": "../core",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recoil": "^0.7.4",
-    "simplex-noise": "^3.0.1"
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
@@ -37,9 +35,7 @@
     "eslint-plugin-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^28.1.1",
     "prettier": "^2.7.1",
-    "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
     "vite-plugin-html": "^3.2.0"
