--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -4,7 +4,7 @@
   "author": "sya-ri",
   "private": true,
   "scripts": {
-    "run": "ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
   },
