--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -20,5 +20,8 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "minesweeper-core": "../core"
   }
 }
