--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint src --fix"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^7.32.0 || ^8.2.0",
