--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,18 +18,18 @@
     "simplex-noise": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.1",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1",
-    "ts-jest": "^28.0.5",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
