--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint-fix": "eslint src --fix"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
