--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,7 @@
     "build": "tsc -p tsconfig.build.json",
     "test": "jest",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint-fix": "eslint src --fix"
   },
   "dependencies": {
     "simplex-noise": "^3.0.1"
