--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp src/404.html dist",
     "preview": "vite preview",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix"
